Fix embedded tests